--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,7 @@ header a {
     font-size: 16px;
 }
 
-/* Info Section one*/
+/* What We Do | What You Do */
 .intro {
     text-align: center;
 }
@@ -177,5 +177,55 @@ header a {
     font-size: 23px;
 }
 .steps span {
-    text-size 38px;
+    font-size: 38px;
 }
+
+/* Meet the Trainers */
+.trainers {
+    text-align: center;
+}
+
+.trainer {
+    width: 900px;
+    margin: 0 auto 30px auto;
+    background: #024e76;
+    color: #fce138;
+    overflow: auto;
+}
+
+.trainer img {
+    width: 35%;
+    float: left;
+}
+
+.trainer-bio {
+    padding: 35px;
+    float: left;
+    width: 65%;
+}
+
+.trainer-bio h3 {
+    font-size: 32px;
+    margin-bottom: 8px;
+}
+
+.trainer-bio h4 {
+    font-weight: lighter;
+    font-size: 26px;
+    margin-bottom: 25px;
+}
+
+.trainer-bio p {
+    font-size: 17px;
+    line-height: 1.3;
+}
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+
