--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,6 +144,7 @@ header a {
 .secondary-border {
     border-color: #39a6b2;
 }
+
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
@@ -178,6 +179,15 @@ header a {
 }
 .steps span {
     font-size: 38px;
+}
+
+.section-title {
+    font-size: 55px;
+    color: #024e76;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
+    display: inline-block;
+    border-bottom: 3px solid;
 }
 
 /* Meet the Trainers */
@@ -228,4 +238,45 @@ header a {
     text-align: right;
 }
 
-
+/* REACH OUT STYLES START */
+.contact {
+    text-align: center;
+    background: #024e76;
+  }
+  
+  .contact h2 {
+    color: #fce138;
+  }
+  
+  .contact-info iframe {
+    width: 400px;
+    height: 400px;
+  }
+  
+  .contact-info div {
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
+  }
+  
+  .contact-info h3 {
+    color: #fce138;
+    font-size: 32px;
+  }
+  
+  .contact-info p,
+  .contact-info address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+  }
+  
+  .contact-info a {
+    color: #fce138;
+  }
+  
+  /* REACH OUT STYLES END */
