--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,24 +11,25 @@ body {
 
 /* header styling */
 header {
-   padding: 20px 35px;
-   background-color: #39a6b2; 
+     display: flex;
+     justify-content: space-between;
+     flex-wrap: wrap;
+     padding: 20px 35px;
+     background-color: #39a6b2; 
 }
 
 header h1 {
-    font-weight:bold;
-    font-size: 36px;
-    color: #fce138;
-    margin: 0;
-    display: inline;
+     font-weight:bold;
+     font-size: 36px;
+     color: #fce138;
+     margin: 0;
 }
 
 header a {
-    text-decoration: none;
-    color: #fce138;
+     text-decoration: none;
+     color: #fce138;
 }
  header nav {
-     float: right;
      margin: 7px 0;
  }
 
