--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,17 +145,15 @@ footer {
 }
 
 /* What We Do | What You Do */
-.intro {
-    text-align: center;
-}
 
 .section-title {
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
     border-bottom: 3px solid;
-    display: inline-block;
 }
 
 .primary-border {
@@ -167,6 +165,7 @@ footer {
 }
 
 .intro p {
+    text-align: center;
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
@@ -175,7 +174,6 @@ footer {
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
@@ -213,7 +211,6 @@ footer {
 
 /* Meet the Trainers */
 .trainers {
-    text-align: center;
 }
 
 .trainer {
@@ -259,9 +256,12 @@ footer {
     text-align: right;
 }
 
+.flex-row {
+    display: flex;
+}
+
 /* REACH OUT STYLES START */
 .contact {
-    text-align: center;
     background: #024e76;
   }
   
