--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ header nav ul {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -80,6 +80,7 @@ footer {
 /* Hero Style Start */
 .hero {
     display: flex;
+    align-items: flex-start;
     justify-content: center;
     flex-wrap: wrap;
     background-image: url("../images/hero-bg.jpg");
@@ -93,7 +94,7 @@ footer {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -151,7 +152,7 @@ footer {
     text-align: center;
     margin: 0 auto 35px auto;
     width: 50%;
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
 }
@@ -356,4 +357,9 @@ footer {
     font-size: 16px;
 }
   
-  /* REACH OUT STYLES END */
+/* REACH OUT STYLES END */
+
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+      
+}
