--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,27 +11,35 @@ body {
 
 /* header styling */
 header {
-     display: flex;
-     justify-content: space-between;
-     flex-wrap: wrap;
-     padding: 20px 35px;
-     background-color: #39a6b2; 
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 20px 35px;
+    background-color: #39a6b2; 
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 
 header h1 {
-     font-weight:bold;
-     font-size: 36px;
-     color: #fce138;
-     margin: 0;
+    font-weight:bold;
+    font-size: 36px;
+    color: #fce138;
+    margin: 0;
 }
 
 header a {
-     text-decoration: none;
-     color: #fce138;
+    text-decoration: none;
+    color: #fce138;
 }
  
 header nav {
-     margin: 7px 0;
+    margin: 7px 0;
 }
 
 header nav ul {
@@ -46,6 +54,14 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
 }
 
 footer {
@@ -86,6 +102,8 @@ footer {
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 
 .hero-cta {
@@ -101,6 +119,7 @@ footer {
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form {
@@ -109,9 +128,11 @@ footer {
     border-style: solid;
     border-width: 3px;
     border-color: #024e76;
-    background-color: #fce138;
+    border-radius: 15px;
+    background-color: rgba(252, 225, 56, 0.90);
     padding: 20px;
     color: #024e76;
+    box-shadow: 0 0 10px rgba(252, 225, 56, 0.5);
 }
 
 .hero-form h3 {
@@ -125,12 +146,19 @@ footer {
 
 .form-input {
     border: 1px solid #024e76;
+    border-radius: 10px;
     display: block;
     padding: 7px 15px;
     font-size: 16px;
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    background-color: rgba(255,255,255, 0.5);
+}
+
+.form-input:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
 }
 
 .hero-form label {
@@ -141,8 +169,13 @@ footer {
     background-color: #024e76;
     color: #fce138;
     border: none;
+    border-radius: 10px;
     padding: 10px 20px;
     font-size: 16px;
+}
+
+.hero-form button:hover {
+    background-color: #39a6b2;
 }
 
 /* What We Do | What You Do */
@@ -182,10 +215,13 @@ footer {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.step:last-child {
+    border-bottom: 1px solid #39a6b2;
 }
 
 .step h3 {
@@ -335,9 +371,9 @@ footer {
     color: #fce138;
 }
 
-.contact-form input,
-.contact-form textarea {
+.contact-form input, .contact-form textarea {
     border: 1px solid #024e76;
+    border-radius: 10px;
     display: block;
     padding: 7px 15px;
     font-size: 16px;
@@ -345,16 +381,28 @@ footer {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    background-color: rgba(255,255,255, 0.75);
+}
+
+.contact-form input:focus, .contact-form textarea:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
 }
 
 .contact-form button {
     width: 100%;
     border: none;
+    border-radius: 10px;
     background: #fce138;
     color: #024e76;
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+}
+
+.contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
 }
   
 /* REACH OUT STYLES END */
@@ -364,6 +412,7 @@ footer {
     header {
         padding-bottom: 0;
         justify-content: center;
+        position: relative;
     }
 
     header h1 {
