--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+:root {
+    --primary-color: #fce138;
+    --secondary-color: #024e76;
+    --tertiary-color: #39a6b2;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -5,7 +11,7 @@
 }
 
 body {
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-family: Helvetica, Arial, sans-serif;
 }
 
@@ -15,7 +21,7 @@ header {
     justify-content: space-between;
     flex-wrap: wrap;
     padding: 20px 35px;
-    background-color: #39a6b2; 
+    background-color: var(--tertiary-color); 
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     position: sticky;
     top: 0;
@@ -24,18 +30,19 @@ header {
     background-position: center;
     background-attachment: fixed;
     background-position: 80%;
+    z-index: 9999;
 }
 
 header h1 {
     font-weight:bold;
     font-size: 36px;
-    color: #fce138;
+    color: var(--primary-color);
     margin: 0;
 }
 
 header a {
     text-decoration: none;
-    color: #fce138;
+    color: var(--primary-color);
 }
  
 header nav {
@@ -58,8 +65,8 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     border-radius: 15px;
     text-shadow: none;
 }
@@ -68,13 +75,13 @@ footer {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    background: #fce138;
+    background: var(--primary-color);
     width: 100%;
     padding: 40px 35px;
 }
 
  footer h2 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 30px;
     margin: 0;
  }
@@ -85,7 +92,7 @@ footer {
  }
 
  footer a {
-    color: #024e76;
+    color: var(--secondary-color);
  }
 
  section {
@@ -118,7 +125,7 @@ footer {
 .hero-cta h2 {
     font-style: italic;
     font-size: 55px;
-    color: #fce138;
+    color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
@@ -127,11 +134,11 @@ footer {
     margin: 3.5%;
     border-style: solid;
     border-width: 3px;
-    border-color: #024e76;
+    border-color: var(--secondary-color);
     border-radius: 15px;
     background-color: rgba(252, 225, 56, 0.90);
     padding: 20px;
-    color: #024e76;
+    color: var(--secondary-color);
     box-shadow: 0 0 10px rgba(252, 225, 56, 0.5);
 }
 
@@ -145,12 +152,12 @@ footer {
 }
 
 .form-input {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     border-radius: 10px;
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     background-color: rgba(255,255,255, 0.5);
@@ -166,8 +173,8 @@ footer {
 }
 
 .hero-form button {
-    background-color: #024e76;
-    color: #fce138;
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
     border: none;
     border-radius: 10px;
     padding: 10px 20px;
@@ -175,7 +182,7 @@ footer {
 }
 
 .hero-form button:hover {
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
 }
 
 /* What We Do | What You Do */
@@ -186,29 +193,29 @@ footer {
     margin: 0 auto 35px auto;
     width: 50%;
     font-size: 48px;
-    color: #024e76;
+    color: var(--secondary-color);
     border-bottom: 3px solid;
 }
 
 .primary-border {
-    border-color: #fce138;
+    border-color: var(--primary-color);
 }
 
 .secondary-border {
-    border-color: #39a6b2;
+    border-color: var(--tertiary-color);
 }
 
 .intro p {
     text-align: center;
     line-height: 1.7;
-    color: #39a6b2;
+    color: var(--tertiary-color);
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
 }
 
 .steps {
-    background: #fce138;
+    background: var(--primary-color);
 }
 
 .step {
@@ -221,11 +228,11 @@ footer {
 }
 
 .step:last-child {
-    border-bottom: 1px solid #39a6b2;
+    border-bottom: 1px solid var(--tertiary-color);
 }
 
 .step h3 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 46px;
     flex: 1 30%;
 }
@@ -235,14 +242,14 @@ footer {
 }
 
 .step-text p {
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-size: 18px;
 }
 
 .step-text h4 {
     font-size: 26px;
     line-height: 1.5;
-    color: #024e76;
+    color: var(--secondary-color);
 }
 
 .step-info {
@@ -261,14 +268,9 @@ footer {
     max-width: 100%;
 }
 
-
-
-
-
-
 .section-title {
     font-size: 55px;
-    color: #024e76;
+    color: var(--secondary-color);
     margin-bottom: 35px;
     padding: 0 100px 20px 100px;
     display: inline-block;
@@ -286,8 +288,8 @@ footer {
 
 .trainer {
     margin: 20px;
-    background: #024e76;
-    color: #fce138;
+    background: var(--secondary-color);
+    color: var(--primary-color);
     flex: 1;
 }
 
@@ -328,11 +330,11 @@ footer {
 
 /* REACH OUT STYLES START */
 .contact {
-    background: #024e76;
+    background: var(--secondary-color);
   }
   
 .contact h2 {
-    color: #fce138;
+    color: var(--primary-color);
   }
 
 .contact > * {
@@ -355,7 +357,7 @@ footer {
 }
   
 .contact-info h3 {
-    color: #fce138;
+    color: var(--primary-color);
     font-size: 32px;
 }
   
@@ -368,16 +370,16 @@ footer {
 }
   
 .contact-info a {
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 .contact-form input, .contact-form textarea {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     border-radius: 10px;
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
@@ -393,17 +395,83 @@ footer {
     width: 100%;
     border: none;
     border-radius: 10px;
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
 }
 
 .contact-form button:hover {
-    color: #fce138;
-    background: #39a6b2;
+    color: var(--primary-color);
+    background: var(--tertiary-color);
 }
+
+.checkbox-wrapper input, .radio-wrapper input {
+    opacity: 0;
+}
+
+.checkbox-wrapper label, .radio-wrapper label {
+    position: relative;
+    left: 10px;
+    margin: 10px;
+    line-height: 1.6;
+}
+
+.checkbox-wrapper label::before, .radio-wrapper label::before {
+    content: "";
+    height: 20px;
+    width: 20px;
+    background: rgba(255, 255, 255, 0.75);
+    border: 1px solid var(--secondary-color);
+    position: absolute;
+    top: -4px;
+    left: -30px;
+}
+
+.radio-wrapper label::after {
+    content: "";
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: var(--secondary-color);
+    position: absolute;
+    left: -29px;
+    top: -3px;
+}
+
+.checkbox-wrapper label::after {
+    content: "";
+    height: 6px;
+    width: 14px;
+    border-left: 2px solid var(--secondary-color);
+    border-bottom: 2px solid var(--secondary-color);
+    position: absolute;
+    left: -26px;
+    top: 1px;
+}
+
+.radio-wrapper label::before {
+    border-radius: 50%;
+}
+
+.checkbox-wrapper label::after {
+    transform: rotate(-58deg);
+}
+
+.radio-wrapper label::after {
+    background-image: radial-gradient(circle, var(--tertiary-color), var(--secondary-color));
+}
+
+.checkbox-wrapper input + label::after, .radio-wrapper input + label::after {
+    content: none;
+}  
+
+.checkbox-wrapper input:checked + label::after, .radio-wrapper input:checked + label::after {
+    content: "";
+}
+
+
   
 /* REACH OUT STYLES END */
 
